--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ python_requires = >=3.8
 install_requires =
     requests~=2.27
     pydantic~=1.9
+    pandas~=1.4
 
 [options.extras_require]
 dev = pytest==6.2.5;pytest-mock==3.7.0;arrow==1.2.2;factory-boy==3.2.1;pytest-factoryboy==2.1.0;pytest-cov==3.0.0;mypy==0.931
