--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,38 @@ dev = pytest==6.2.5;pytest-mock==3.7.0;arrow==1.2.2;factory-boy==3.2.1;pytest-fa
 
 [options.packages.find]
 where = src
+
+[flake8]
+exclude =
+    .git,
+    __pycache__,
+    env,
+    venv,
+    dist,
+classmethod-decorators =
+    classmethod
+    validator
+inline-quotes = single
+multiline-quotes = double
+docstring-quotes = double
+import-order-style = smarkets
+ban-relative-imports = true
+max-line-length = 120
+max-complexity = 8
+application-import-names =
+    signals_notebook,
+    tests,
+
+ignore =
+    # Missing trailing comma
+    C812,
+    C815,
+    # Model does not define __str__ method
+    DJ08,
+    # Line break before binary operator
+    W503,
+    # argument "format" is shadowing a python builtin
+    A002,
+    A003,
+    # may be undefined, or defined from star imports
+    F405
