--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,7 +21,7 @@ pipelines:
             - pip
           script:
             - pip install -r requirements/lint.txt
-            - flake8 .
+            - flake8 . --config=./setup.cfg
       - step:
           name: Static types checking
           caches:
