--- a/setup.cfg
+++ b/setup.cfg
@@ -61,4 +61,6 @@ ignore =
     A002,
     A003,
     # may be undefined, or defined from star imports
-    F405
+    F405,
+    # mixedCase variable in class scope
+    N815
