PSFSN-15: fixed flake8 warnings - add extra directories to exclude

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ exclude =
     env,
     venv,
     dist,
+    .\tests\entities\snapshots\
+    .\tests\entities\stoichiometry\snapshots\
 classmethod-decorators =
     classmethod
     validator
