PSFSN-15: fixed flake8 warnings - add snapshot directories to exclude

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ exclude =
     env,
     venv,
     dist,
-    .\tests\entities\snapshots\
-    .\tests\entities\stoichiometry\snapshots\
+    snapshots,
 classmethod-decorators =
     classmethod
     validator
