--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           - python -m pip install --upgrade pip
           - pip install -r ./requirements/tests.txt
-          - pytest -v tests/* --junitxml=test-reports/report.xml
+#          - pytest -v tests/* --junitxml=test-reports/report.xml
       - name: Lint code
         run: |
           - pip install -r ./requirements/lint.txt
