--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Test
-        run: |
-          - python -m pip install --upgrade pip
-          - pip install -r ./requirements/tests.txt
+#      - name: Test
+#        run: |
+#          - python -m pip install --upgrade pip
+#          - pip install -r ./requirements/tests.txt
 #          - pytest -v tests/* --junitxml=test-reports/report.xml
       - name: Lint code
         run: |
