--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,17 +20,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-#      - name: Test
-#        run: |
-#          - python -m pip install --upgrade pip
-#          - pip install -r ./requirements/tests.txt
-#          - pytest -v tests/* --junitxml=test-reports/report.xml
+      - name: Test
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./requirements/tests.txt
+          pytest -v tests/* --junitxml=test-reports/report.xml
       - name: Lint code
         run: |
-          - pip install -r ./requirements/lint.txt
-          - flake8 .
+          pip install -r ./requirements/lint.txt
+          flake8 .
       - name: Static types checking
         run: |
-          - pip install -r ./requirements/mypy.txt
-          - cd src
-          - mypy .
+          pip install -r ./requirements/mypy.txt
+          cd src
+          mypy .
