--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,6 @@
 name: Tests
 
 on:
-  push:
   pull_request:
     branches: [ main ]
 
@@ -24,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements/tests.txt
-          pytest -v ./tests/* --junitxml=test-reports/report.xml
+          pytest -v tests --junitxml=test-reports/report.xml
       - name: Lint code
         run: |
           pip install -r ./requirements/lint.txt
