--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,12 +6,14 @@ on:
 
 jobs:
   build:
+
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ "3.9", "3.10" ]
+        os: [ ubuntu-latest, macos-latest]
+        python-version: [ "3.9.0", "3.10.0" ]
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -19,15 +21,20 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install dependencies
+        run: |
+        python -m pip install --upgrade pip
+        pip install -r ./requirements/tests.txt
+
       - name: Test
         run: |
-          python -m pip install --upgrade pip
-          pip install -r ./requirements/tests.txt
           pytest -v tests --junitxml=test-reports/report.xml
+
       - name: Lint code
         run: |
           pip install -r ./requirements/lint.txt
           flake8 .
+
       - name: Static types checking
         run: |
           pip install -r ./requirements/mypy.txt
