--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
+        with:
+          add: 'docs'
+
 
       - name: Test
         run: |
