--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: 'docs'
+          pull: '--rebase'
 
       - name: Test
         run: |
