Some changes in README

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = pesn-python-sdk
+name = pesn-sdk
 version = 1.0.0
-author = Evgeniy Pokidov
-author_email = evgeniy.pokidov@quantori.com
-description = PerkinElmer Signals Notebook Python SDK
+author = Quantori
+author_email = contact@quantori.com
+description = Quantori Python SDK for PerkinElmer Signals Notebook
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://bitbucket.org/quantori/pesn-python-sdk/
+url = https://github.com/quantori/quantori-pesn-python-sdk
 classifiers =
     Programming Language :: Python :: 3
-    License :: Proprietary
+    License :: Apache 2.0
     Operating System :: OS Independent
 
 [options]
