--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/quantori/quantori-pesn-python-sdk
 classifiers =
-    Programming Language :: Python :: 3
-    License :: Apache 2.0
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 
 [options]
