SBT-14.Worflows run one after one

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 name: Tests
 
 on:
+  workflow_run:
+    workflows: [ "Update_documentation" ]
+    types:
+      - completed
   pull_request:
     branches: [ main ]
 
