--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,9 @@ name: Tests
 
 on:
   workflow_run:
-    workflows: [Update_documentation]
-    types: [completed]
-#  pull_request:
-#    branches: [ main ]
+    workflows: ["Update_documentation"]
+    types:
+      - completed
 
 jobs:
 
