--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Update_documentation
+name: Pull request
 
 on:
   pull_request:
@@ -32,3 +32,40 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: 'docs'
+
+  tests:
+    needs: build
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, macos-latest ]
+        python-version: [ "3.9.0", "3.10.0" ]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./requirements/tests.txt
+
+      - name: Test
+        run: |
+          pytest -v tests --junitxml=test-reports/report.xml
+
+      - name: Lint code
+        run: |
+          pip install -r ./requirements/lint.txt
+          flake8 .
+
+      - name: Static types checking
+        run: |
+          pip install -r ./requirements/mypy.txt
+          cd src
+          mypy .
