--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           pdoc -f --html -o docs src/signals_notebook
 
+      - name: Move generated files
+        run:  |
+          mv docs/signals_notebook/* docs
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
